--- a/angular.json
+++ b/angular.json
@@ -124,5 +124,10 @@
       }
     }
   },
-  "defaultProject": "caelumpic"
+  "defaultProject": "caelumpic",
+  "schematics": {
+    "@schematics/angular:component": {
+      "inlineStyle": true
+    }
+  }
 }
